--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.5.1",
+    "@loadable/component": "^5.16.3",
     "bootstrap": "5.3.2",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -19,6 +21,8 @@
     "sass": "1.70.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
+    "@types/loadable__component": "^5.13.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
