--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fortawesome/fontawesome-free": "6.5.1",
     "@loadable/component": "^5.16.3",
     "bootstrap": "5.3.2",
@@ -18,13 +21,15 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
-    "sass": "1.70.0"
+    "sass": "1.70.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.29",
     "@types/loadable__component": "^5.13.8",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
