--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/jquery": "^3.5.29",
     "@types/loadable__component": "^5.13.8",
     "@types/react": "^18.2.43",
