--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
     "sass": "1.70.0",
